# sycl-newton-fractal

./: .clang-format  CMakeLists.txt  README.adoc
include/: comp.hpp  compute.hpp  interface.hpp  poly.hpp
src/: main.cpp
test/: comp.cpp  poly.cpp
